<resources>
    <!-- App wide base strings -->
    <string name="app_name">Money Box</string>

    <!-- Formatting -->
    <string name="total_money_spent">Total: %s</string>

    <string name="category_header">Category</string>
    <string name="add_expense_button">Add Expense</string>
    <string name="add_category_button">Add Category</string>
    <string name="save_button">Save</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="delete_button_text">Delete</string>

    <string name="expenses_counter_text_singular">%d Item</string>
    <string name="expenses_counter_text_plural">%d Items</string>
    <string name="expenses_counter_separator"> - </string>

    <string name="header_selection_all_text">All</string>
    <string name="header_selection_right_arrow">></string>

    <string name="money_amount_average_in_parenthesis">(%s/%s)</string>

    <string name="money_amount_with_currency">%s %s</string>

    <string name="expense_add_copy_from_hint">Copy From</string>
    <string name="expense_add_amount_hint">Expense Amount</string>
    <string name="expense_add_description_hint">Expense Description</string>
    <string name="expense_add_date_of_expense_hint">Date of Expense</string>
    <string name="expense_add_currency_hint">Currency</string>

    <string name="expense_category">Expense Category</string>
    <string name="expense_date">Expense Date</string>
    <string name="expense_currency">Expense Currency</string>


    <string name="category_name_with_expense_count">%s (%d)</string>
    <string name="category_color">Category Color</string>


    <!-- Formatting using spaces -->
    <string name="space_at_the_start">&#160;%s</string>
    <string name="space_at_the_end">%s&#160;</string>

    <!-- Bottom Navigation Bar -->
    <string name="bottom_nav_bar_options">Options</string>
    <string name="bottom_nav_bar_categories">Categories</string>
    <string name="bottom_nav_bar_expenses">Expenses</string>
    <string name="bottom_nav_bar_about">About</string>

    <!-- Selected fragment view -->
    <string name="selected_fragment_back_button">Back</string>

    <!-- Filter names -->
    <string name="category_filter_name">Category</string>
    <string name="amount_filter_name">Amount</string>
    <string name="currency_filter_name">Currency</string>

    <!-- Filter text -->
    <string name="filter_text">%s (%d)</string>
</resources>
