<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBlack"
        android:focusableInTouchMode="true"
        tools:context=".ui.MainActivity">

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/expense_copy_text_input_layout"
            style="@style/TextInputLabelStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                android:id="@+id/expense_copy_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryGreen"
                android:hint="@string/expense_add_copy_from_hint"
                android:inputType="textAutoCorrect"
                android:paddingHorizontal="12dp"
                android:paddingTop="24dp"
                android:paddingBottom="12dp"
                android:textCursorDrawable="@null"
                android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/expense_amount_text_input_layout"
            style="@style/TextInputLabelStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/expense_copy_text_input_layout">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/expense_amount_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryGreen"
                android:hint="@string/expense_add_amount_hint"
                android:inputType="numberDecimal"
                android:singleLine="true"
                android:textCursorDrawable="@null"
                android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/expense_description_text_input_layout"
            style="@style/TextInputLabelStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/expense_amount_text_input_layout">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/expense_description_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryGreen"
                android:hint="@string/expense_add_description_hint"
                android:singleLine="true"
                android:textCursorDrawable="@null"
                android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
            android:id="@+id/expense_category_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="12dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/expense_description_text_input_layout">

        <TextView
                android:id="@+id/expense_category_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="0dp"
                android:paddingEnd="20dp"
                android:text="@string/expense_category"
                android:textColor="@color/colorPrimaryTextDarker"
                android:textSize="15sp" />

        <TextView
                android:id="@+id/expense_category_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryGreen"
                android:gravity="center"
                android:paddingHorizontal="12dp"
                android:paddingVertical="6dp"
                android:text="@string/category_header"
                android:textColor="@color/colorPrimaryText"
                tools:text="Category" />

    </LinearLayout>

    <LinearLayout
            android:id="@+id/expense_date_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:orientation="horizontal"
            android:paddingTop="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/expense_category_linear_layout">

        <TextView
                android:id="@+id/expense_date_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="0dp"
                android:paddingEnd="20dp"
                android:text="@string/expense_date"
                android:textColor="@color/colorPrimaryTextDarker"
                android:textSize="15sp" />

        <TextView
                android:id="@+id/expense_date_picker_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryGreen"
                android:gravity="center"
                android:hint="@string/expense_add_date_of_expense_hint"
                android:paddingHorizontal="12dp"
                android:paddingVertical="6dp"
                android:textColor="@color/colorPrimaryText" />

    </LinearLayout>

    <LinearLayout
            android:id="@+id/expense_currency_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:orientation="horizontal"
            android:paddingTop="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/expense_date_linear_layout">

        <TextView
                android:id="@+id/expense_currency_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="0dp"
                android:paddingEnd="20dp"
                android:text="@string/expense_currency"
                android:textColor="@color/colorPrimaryTextDarker"
                android:textSize="15sp" />

        <TextView
                android:id="@+id/expense_currency_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryGreen"
                android:gravity="center"
                android:hint="@string/expense_add_currency_hint"
                android:paddingHorizontal="12dp"
                android:paddingVertical="6dp"
                android:textColor="@color/colorPrimaryText" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
            android:id="@+id/expense_add_edit_positive_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="16dp"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="Positive" />

    <com.google.android.material.button.MaterialButton
            android:id="@+id/expense_add_edit_cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/cancel_button_text"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="@+id/expense_add_edit_positive_button"
            app:layout_constraintEnd_toStartOf="@+id/expense_add_edit_positive_button"
            app:layout_constraintTop_toTopOf="@+id/expense_add_edit_positive_button" />

    <com.google.android.material.button.MaterialButton
            android:id="@+id/expense_add_edit_delete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:backgroundTint="@color/colorNegative"
            android:text="@string/delete_button_text"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="@+id/expense_add_edit_positive_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/expense_add_edit_positive_button" />

</androidx.constraintlayout.widget.ConstraintLayout>